# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/global/resource_management/resmgr.gni")
import("//build/ohos.gni")

#new  resmgr_napi_core_public_config
config("rawfile_config") {
  include_dirs = [
    "//base/global/resource_management/interfaces/native/resource/include",
    "//base/global/resource_management/interfaces/inner_api/include",
    "//third_party/bounds_checking_function/include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog_pub_config",
  ]
  if (resource_management_support_icu) {
    include_dirs += [ "//third_party/icu/icu4c/source/i18n" ]
  }
}

ohos_source_set("rawfile") {
  public_configs = [
    "//third_party/cJSON:cJSON_config",
    ":rawfile_config",
    "//foundation/appframework/resource_management/interfaces/js/innerkits/core:resmgr_napi_core_public_config",
  ]
  cflags = [ "-Wno-error=inconsistent-missing-override" ]
  sources = [ "//base/global/resource_management/frameworks/resmgr/src/raw_file_manager.cpp" ]

  public_deps = [ "//foundation/arkui/napi:ace_napi" ]
  defines = [ "__ARKUI_CROSS__" ]
  subsystem_name = "global"
  part_name = "resource_management"
}
