# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/appframework/ability/ability_runtime/ability_runtime.gni")

config("configuration_config") {
  include_dirs = [
    "//base/global/resource_management/interfaces/inner_api/include",
    "//third_party/json/include",
    "${ability_runtime_cross_platform_path}/interfaces/inner_api/configuration",
  ]
}

template("ability_runtime_configuration") {
  forward_variables_from(invoker, "*")
  ohos_source_set(target_name) {
    subsystem_name = ability_subsystem_name
    part_name = ability_part_name
    configs = [
      ":configuration_config",
      "${ability_runtime_cross_platform_path}/interfaces/inner_api/hilog:ability_cross_platform_hilog_config",
    ]

    if (target_cpu == "arm64") {
      defines = [ "_ARM64_" ]
    }

    sources = [ "${ability_runtime_cross_platform_path}/frameworks/native/base/configuration/configuration.cpp" ]
  }
}

ability_runtime_configuration("cross_platform_configuration") {
}