# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/appframework/ability/ability_runtime/ability_runtime.gni")

config("error_utils_private_config") {
  include_dirs = [
    "${ability_runtime_cross_platform_path}/interfaces/inner_api/error",
    "${ability_runtime_cross_platform_path}/interfaces/inner_api/jsruntime",
    "${ability_runtime_cross_platform_path}/frameworks/native/jsruntime/include",
  ]
}

ohos_source_set("ability_runtime_error_util") {
  defines = []
  if (target_cpu == "arm64") {
    defines = [ "_ARM64_" ]
  }

  sources = [ "${ability_runtime_cross_platform_path}/frameworks/native/base/error/ability_runtime_error_util.cpp" ]

  configs = [
    ":error_utils_private_config",
    "${ability_runtime_cross_platform_path}/interfaces/inner_api/hilog:ability_cross_platform_hilog_config",
  ]

  deps = [
    "${ability_runtime_cross_platform_path}/interfaces/inner_api/jsruntime:cross_platform_jsruntime",
    "//foundation/arkui/napi:ace_napi",
  ]

  if (target_os == "android") {
    defines += [ "ANDROID_PLATFORM" ]
  } else if (target_os == "ios") {
    defines += [ "IOS_PLATFORM" ]
  }

  subsystem_name = "ability"
  part_name = "ability_runtime"
}
