# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/appframework/ability/ability_runtime/ability_runtime.gni")

config("jsruntime_config") {
    include_dirs = [
      "//foundation/arkui/napi",
      "${ability_runtime_cross_platform_path}/interfaces/inner_api/jsruntime",
      "${ability_runtime_cross_platform_path}/interfaces/inner_api/want",
      "${ability_runtime_cross_platform_path}/interfaces/inner_api/bundle",
      "${ability_runtime_cross_platform_path}/frameworks/native/jsruntime/include",
      "//third_party/libuv/include",
    ]
}

template("ability_runtime_jsruntime") {
  forward_variables_from(invoker, "*")

  ohos_source_set(target_name) {
    subsystem_name = ability_subsystem_name
    part_name = ability_part_name
    configs = [
        ":jsruntime_config",
        "//arkcompiler/ets_runtime:ark_jsruntime_public_config",
        "${ability_runtime_cross_platform_path}/interfaces/inner_api/hilog:ability_cross_platform_hilog_config",
    ]

    defines = [ "SUPPORT_GRAPHICS"]

    if (target_cpu == "arm64") {
      defines += [ "_ARM64_" ]
    }

    sources = [
      "${ability_runtime_cross_platform_path}/frameworks/native/jsruntime/src/js_console_log.cpp",
      "${ability_runtime_cross_platform_path}/frameworks/native/jsruntime/src/js_data_struct_converter.cpp",
      "${ability_runtime_cross_platform_path}/frameworks/native/jsruntime/src/js_runtime.cpp",
      "${ability_runtime_cross_platform_path}/frameworks/native/jsruntime/src/js_runtime_utils.cpp",
      "${ability_runtime_cross_platform_path}/frameworks/native/jsruntime/src/js_want_utils.cpp",
      "${ability_runtime_cross_platform_path}/frameworks/native/jsruntime/src/runtime.cpp",
    ]

    deps = [
      "//foundation/arkui/napi:ace_napi",
      "${ability_runtime_cross_platform_path}/interfaces/inner_api/bundle:cross_platform_bundle_parser",
    ]

    if (target_os == "android") {
      defines += [ "ANDROID_PLATFORM" ]
      deps += [ "//arkcompiler/ets_runtime:libark_jsruntime" ]
    } else if (target_os == "ios") {
      defines += [ "IOS_PLATFORM" ]
      deps += [ "//arkcompiler/ets_runtime:libark_jsruntime_static" ]
    }

    deps += [ "//foundation/appframework/arkui/uicontent:ace_uicontent_interface" ]
  }
}

ability_runtime_jsruntime("cross_platform_jsruntime") {

}