# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("napi_context_base_public_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "//foundation/arkui/napi/interfaces/kits",
    "///third_party/node/src",
  ]
}

ohos_source_set("napi_base_context") {
  sources = [ "src/napi_base_context.cpp" ]

  configs = []

  public_configs = [ ":napi_context_base_public_config" ]

  subsystem_name = "ability"
  part_name = "ability_runtime"
}

