# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//arkcompiler/ets_frontend/es2panda/es2abc_config.gni")
import("//build/ohos.gni")

import(
    "//foundation/appframework/window_manager/window_manager.gni")

config("window_manager_napi_config") {
    include_dirs = [
        "${window_manager_napi_path}/wm/include",
        "${window_manager_napi_path}/innerkits/wm",
        "${window_manager_napi_path}/kits/kits/napi/window_runtime/window_stage_napi",
    ]
}

es2abc_gen_abc("gen_window_stage_abc") {
  src_js = rebase_path("window_stage.js")
  dst_file = rebase_path(target_out_dir + "/window_stage.abc")
  in_puts = [ "window_stage.js" ]
  out_puts = [ target_out_dir + "/window_stage.abc" ]
  extra_args = [ "--module" ]
}
gen_js_obj("window_stage_js") {
  input = "window_stage.js"
  output = target_out_dir + "/window_stage.o"
}

gen_js_obj("window_stage_abc") {
  input = get_label_info(":gen_window_stage_abc", "target_out_dir") +
          "/window_stage.abc"
  output = target_out_dir + "/window_stage_abc.o"
  dep = ":gen_window_stage_abc"
}

#libapplication_windowstage
ohos_shared_library("libapplication_windowstage") {
  sources = [ "${window_manager_napi_path}/kits/napi/window_runtime/window_stage_napi/window_stage_module.cpp", ]

  configs = [
    ":window_manager_napi_config",
  ]

  deps = [
    ":window_stage_abc",
    ":window_stage_js",
  ]

  deps += [ "//foundation/arkui/napi:ace_napi" ]

  relative_install_dir = "module/application"

  part_name = "window_manager"
  subsystem_name = "window"
}
